# jukebox

./: .gitignore  .yolo.json  Cargo.toml  LICENSE  NOTICE  README.md
.agents/skills/jukebox-isolated-release-judge/: SKILL.md
.agents/skills/jukebox-product-audit/: SKILL.md
.agents/skills/jukebox-provider-reliability/: SKILL.md
.agents/skills/jukebox-tui-visual-qa/: SKILL.md
.github/workflows/: ci.yml  release.yml
.opencode/: context.md  prompt  sync-issues.md  todo.md  todo.version.json  work-log.md
.opencode/docs/: _metadata.json  docs_rs_clap_460_clap__derive__tutorial_indexhtml.md  docs_rs_ratatui_0302_ratatui_widgets_enumBorderTypehtml.md  ratatui-nocolor-accessibility.md  raw_githubusercontent_com_sigma67_ytmusicapi_main_ytmusicapi_exceptionspy.md  raw_githubusercontent_com_sigma67_ytmusicapi_main_ytmusicapi_mixins_libraryp.md  raw_githubusercontent_com_sigma67_ytmusicapi_main_ytmusicapi_ytmusicpy.md  ytmusicapi-research.md  ytmusicapi_readthedocs_io_en_latest_.md  ytmusicapi_readthedocs_io_en_stable_.md
.opencode/unit-tests/: 2026-07-12T02-21-ci-release-workflows.md  2026-07-12T02-31-state-is-error.md  2026-07-12T021750-skills.md  2026-07-12T0238-fmt-clippy-baseline.md  2026-07-12T0255-slice8-tui-polish.md  2026-07-12T0302-slice7-feedback-logging-diagnostics.md
config/: config.yaml  tui.yaml
docs/issues/: radio-reco-issues.md  ui-revamp.md
scripts/: standardize.sh
scripts/lib/: normalize.bash
scripts/test/: dedup.bats  helpers.bash  inputs.bats  integration.bats  normalize.bats
scripts/yt/: requirements.txt  test_yt.py  yt.py
specs/: 2026-07-04-filtered-lossless-jukebox-design.md  2026-07-04-jukebox-implementation-plan.md  2026-07-06-tui-revamp-design.md  2026-07-06-tui-revamp-plan.md
src/: audio.rs  catalog.rs  cli.rs  config.rs  diagnostics.rs  lib.rs  main.rs  mode.rs  player.rs  prompt.rs  search.rs  state.rs  translit.rs
src/lyrics/: cache.rs  mod.rs
src/reco/: autoplay.rs  candidates.rs  diversity.rs  evaluation.rs  events.rs  explanations.rs  feedback.rs  generator.rs  identity.rs  mixes.rs  mod.rs  profile.rs  radio.rs  ranking.rs  validation.rs
src/source/: device_rate.rs  match_local.rs  mod.rs
src/tui/: app.rs  context.rs  event.rs  input.rs  keymap.rs  mod.rs  queue.rs  view.rs
src/tui/pane/: focus.rs  input.rs  (+7 more)
src/yt/: cache.rs  mod.rs  proto.rs  publication.rs  session.rs  sidecar.rs  state.rs
tests/: app.rs  ascii_polish.rs  audio_restore.rs  catalog.rs  cli.rs  cold_start.rs  columns.rs  command_history.rs  config.rs  context.rs  defect_fixes.rs  defect_fixes2.rs  defect_fixes3.rs  defect_fixes4.rs  degraded.rs  e2e_yt.rs  feedback.rs  feedback_ux.rs  fixer_a.rs  fixer_b.rs  fixer_c.rs  fixer_d.rs  fixer_e.rs  fixer_f.rs  fixer_h.rs  fixer_i.rs  generator_ux.rs  home_view.rs  i5_i2_features.rs  icons.rs  input.rs  interaction_polish.rs  layout.rs  lyrics.rs  mode.rs  no_destructive_key.rs  nonblocking.rs  now_playing_deck.rs  now_playing_pane.rs  onboarding_catalog.rs  (+47 more)
tests/snapshots/: layout__compact_70x20.snap  layout__medium_100x28.snap  layout__minimal_playback_shell.snap  layout__narrow.snap  layout__standard.snap  layout__too_small.snap  layout__wide.snap  layout__wide_130x35.snap  layout__wide_160x50.snap  snapshots_states__command_with_history.snap  snapshots_states__confirmation_playlist_picker.snap  snapshots_states__help_overlay.snap  snapshots_states__local_empty.snap  snapshots_states__local_populated.snap  snapshots_states__lyrics_available.snap  snapshots_states__lyrics_loading.snap  snapshots_states__lyrics_unavailable.snap  snapshots_states__offline_cache.snap  snapshots_states__provider_failure.snap  snapshots_states__queue_empty.snap  snapshots_states__queue_populated.snap  snapshots_states__search_empty.snap  snapshots_states__search_populated.snap  snapshots_states__too_small_state.snap  snapshots_states__yt_authenticating.snap  snapshots_states__yt_no_playlists.snap  snapshots_states__yt_ready.snap  snapshots_states__yt_signed_out.snap  snapshots_states__yt_synchronizing.snap  state_snapshots__command_history.snap  state_snapshots__confirmation.snap  state_snapshots__help.snap  state_snapshots__local_empty.snap  state_snapshots__local_populated.snap  state_snapshots__lyrics_available.snap  state_snapshots__lyrics_loading.snap  state_snapshots__lyrics_unavailable.snap  state_snapshots__offline_cache.snap  state_snapshots__provider_failure.snap  state_snapshots__queue_empty.snap  (+10 more)
(+54 files in other folders)
