[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.25"
lindera = { version = "4.0", features = ["embed-ipadic"] }
lindera-tantivy = { version = "4.0", features = ["embed-ipadic"] }
wana_kana = "5.0"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
