[package]
name = "jukebox"
version = "0.1.1"
edition = "2021"
description = "Filtered-lossless jukebox: bash indexer + Rust TUI with multilingual search and mpv playback"
license = "MIT"
repository = "https://github.com/bibimoni/jukebox"
keywords = ["music", "flac", "tui", "search", "tantivy"]
categories = ["command-line-utilities", "multimedia::audio"]

# Explicit binary so cargo-binstall can resolve the bin name without crates.io
# metadata (we distribute via GitHub Releases, not crates.io). Without this,
# `cargo binstall jukebox` fails with "no binaries specified nor inferred".
[[bin]]
name = "jukebox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.30"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.25"
lindera = { version = "4.0", features = ["embed-ipadic"] }
lindera-tantivy = { version = "4.0", features = ["embed-ipadic"] }
wana_kana = "5.0"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# `cargo-binstall` support: `cargo binstall jukebox` downloads the prebuilt
# binary from the GitHub Release for the current version instead of compiling
# from source (which is slow because lindera-tantivy embeds the ~40MB IPADIC
# dictionary at build time). The archive layout produced by
# .github/workflows/release.yml is: jukebox + scripts/ + README + LICENSE at
# the archive root. The binary inside the archive is named `jukebox` (with the
# platform binary-ext, e.g. `.exe` on Windows, empty on Unix), so bin-dir uses
# the default `{ bin }{ binary-ext }` template resolved at the archive root.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/jukebox-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
# Each Release asset is named jukebox-<target>.tar.gz (matches release.yml's
# `artifact:` matrix value: jukebox-aarch64-apple-darwin, etc.).

